[gd_scene load_steps=7 format=3 uid="uid://c1iaaf4mc2v78"]

[ext_resource type="Texture2D" uid="uid://bs1gjjjtwxf14" path="res://graphics/PNG/playerShip2_red.png" id="1_0wa4d"]
[ext_resource type="Script" path="res://player.gd" id="1_ycnjj"]
[ext_resource type="AudioStream" uid="uid://girlhdbsfv20" path="res://audio/sfx_laser2.ogg" id="3_mbeer"]

[sub_resource type="Gradient" id="Gradient_8sewe"]
offsets = PackedFloat32Array(0.512, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ywlmy"]
gradient = SubResource("Gradient_8sewe")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3sqmh"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 12.09
gravity = Vector3(0, 98, 0)
scale_max = 10.0
color = Color(1, 0.752941, 0, 1)
color_ramp = SubResource("GradientTexture1D_ywlmy")
turbulence_noise_strength = 3.18
turbulence_noise_scale = 9.595

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_ycnjj")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 47)
scale = Vector2(1, 0.96)
process_material = SubResource("ParticleProcessMaterial_3sqmh")
lifetime = 0.2

[node name="PlayerImage" type="Sprite2D" parent="."]
texture = ExtResource("1_0wa4d")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-5, -39, 5, -39, 11, -20, 58, 5, 36, 38, 16, 32, 12, 42, -11, 41, -18, 31, -37, 37, -59, 5, -10, -20)

[node name="LaserStartPosition" type="Marker2D" parent="."]
position = Vector2(0, -50)

[node name="LaserCooldownTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mbeer")
pitch_scale = 1.7

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[connection signal="timeout" from="LaserCooldownTimer" to="." method="_on_laser_cooldown_timer_timeout"]
